# fed-rag

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  hello.py  index.html  mkdocs.yml  mypy.ini  objects.inv  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation_improvement.md  feature_request.yml  integration_request.md  question.yml
.github/workflows/: docs.yml  lint.yml  release.yml  unit_test.yml
api_reference/: index.html
api_reference/bridges/: index.html
api_reference/data_collators/: index.html
api_reference/decorators/: index.html
api_reference/evals/: index.html
api_reference/exceptions/: index.html
api_reference/finetuning_datasets/: index.html
api_reference/fl_tasks/: index.html
api_reference/generators/: index.html
api_reference/inspectors/: index.html
api_reference/knowledge_nodes/: index.html
api_reference/knowledge_stores/: index.html
api_reference/rag_system/: index.html
api_reference/rag_trainers/: index.html
api_reference/retrievers/: index.html
api_reference/tokenizers/: index.html
api_reference/trainer_managers/: index.html
api_reference/trainers/: index.html
community/: index.html
community/changelog/: index.html
community/contributing/: index.html
community/resources/: index.html
docs/: index.md  references.md
docs/examples/: index.md
docs/getting_started/: essentials.md  import_patterns.md  installation.md  integrations.md  quickstart.md  standard_usage.md
docs/notebooks/: basic_fl.ipynb  basic_starter_hf.ipynb  multimodal_rag_benchmarking_gemma3n.ipynb  no_encode_rag_with_mcp.ipynb  rag_benchmarking_hf_mmlu.ipynb
docs/stylesheets/: extra.css
example_scripts/: README.md  cookbook_script-basic_fl.py
examples/: index.html  quick_start.py
examples/knowledge_stores/ra-dit-ks/: README.md  pyproject.toml
examples/knowledge_stores/ra-dit-ks/docker/: Dockerfile  README.md  healthcheck.sh  startup.sh
examples/knowledge_stores/ra-dit-ks/src/ra_dit_ks/: __init__.py  logger.py  main.py
examples/llamaindex/: index.html
examples/quick-start/: README.md  pyproject.toml
examples/quickstart/: README.md  main.py
examples/ra-dit/: README.md  dragon.py  hello.py  knowledge_store.py  llama.py  main.py  pyproject.toml  rag_system.py  retriever_train_loop.py
examples/ra-dit/data/: mock_data.jsonl
examples/ra-dit/ra_dit/: __init__.py  benchmarker.py  centralized.py  datasets.py  evaluate.py  federated_finetune.py  finetune.py  generator_train_loop.py  knowledge_store.py  llama.py  logger.py  main.py  rag_system.py  retriever_train_loop.py  utils.py
examples/ra-dit/ra_dit/_dataset_prep/: base_data_prepper.py  common.py
examples/ra-dit/ra_dit/_dataset_prep/qa/: commonsense.py  math.py  mixin.py  pubmed.py  web_questions.py  wiki.py
examples/ra-dit/ra_dit/evaluation_benchmarks/: __init__.py  base.py  mmlu.py
examples/ra-dit/ra_dit/generators/: __init__.py  llama2_7b.py  llama2_7b_lora.py  utils.py
examples/ra-dit/ra_dit/knowledge_stores/: __init__.py  from_dragon.py  utils.py
examples/ra-dit/ra_dit/retrievers/: __init__.py  dragon.py
examples/ra-dit/ra_dit/trainers_and_testers/: generator.py  retriever.py
examples/ra-dit/trainer_output/checkpoint-3/: README.md  adapter_config.json  rng_state.pth  trainer_state.json
examples/ra_dit/: generator_train_loop.py  index.html  knowledge_store.py  main.py  retriever_train_loop.py
fed_rag/base/: loss.py
fed_rag/types/: server.py
getting_started/: index.html
getting_started/advanced_usage/: index.html
getting_started/basics/: index.html
getting_started/concepts/: index.html
getting_started/essentials/: index.html
getting_started/how_to/: index.html
getting_started/import_patterns/: index.html
getting_started/installation/: index.html
getting_started/integrations/: index.html
getting_started/quick_starts/: index.html
getting_started/quickstart/: index.html
getting_started/standard_usage/: index.html
getting_started/tutorials/: index.html
glossary/: index.html
notebooks/: basic_starter_hf.ipynb
notebooks/basic_fl/: index.html
notebooks/basic_starter_hf/: index.html
notebooks/no_encode_rag_with_mcp/: index.html
notebooks/rag_benchmarking_hf_mmlu/: index.html
references/: index.html
search/: search_index.json
src/fed_rag/: __init__.py  __init__.pyi  _version.py
stylesheets/: extra.css
tests/: conftest.py  test_decorators.py  test_imports.py  test_types_imports.py
tests/api/: test_api.py
tests/bridges/: conftest.py  test_base.py  test_llamaindex.py
tests/data_collators/: conftest.py
tests/decorators/: test_huggingface.py
tests/fl_tasks/: conftest.py  test_huggingface_fltask.py  test_pytorch_fltask.py
tests/generators/: conftest.py  test_gemma3n_generator.py  test_hf_multimodal_model.py  test_hf_peft.py  test_hf_pretrained.py  test_unsloth_fast_model.py  test_unsloth_fast_multimodal_model.py  test_unsloth_utils.py
tests/knowledge_stores/: test_base.py  test_in_memory.py  test_in_memory_managed.py  test_knowledge_node.py  test_qdrant.py  test_qdrant_async.py
tests/rag_system/: conftest.py  test_async_no_encode_rag_system.py  test_async_rag_system.py  test_no_encode_rag_system.py  test_rag_system.py
tests/rag_trainers/: conftest.py  test_base.py  test_hf_rag_trainer.py  test_pytorch_rag_trainer.py
tests/retrievers/: conftest.py  test_base.py  test_hf_sentence_transformer.py
(+374 files in other folders)
