[project]
name = "ra-dit"
version = "0.1.0"
description = "Example of FedRAG following dual finetuning framework of RA-DIT."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "accelerate>=1.4.0",
  "bitsandbytes>=0.45.3",
  "fed-rag",
  "fire>=0.7.0",
  "sentence-transformers>=3.4.1",
  "transformers>=4.49.0"
]

[tool.uv.sources]
fed-rag = {path = "../../"}
